--- a/public/index.html
+++ b/public/index.html
@@ -1185,9 +1185,9 @@
                     <h3>Configure & Connect</h3>
                     <p>Set up your WiFi credentials and start using your new smart assistant.</p>
                     <div class="code-block">
-                        <span style="color: var(--text-muted);">// config.h</span><br>
-                        #define WIFI_SSID "your_network"<br>
-                        #define WIFI_PASS "your_password"
+                        <span style="color: var(--text-muted);">// wifi.h</span><br>
+                        const char* ssid = "YOUR_SSID";
+                        const char* password = "YOUR_PASSWORD";
                     </div>
                 </div>
             </div>
