--- a/public/index.html
+++ b/public/index.html
@@ -1186,7 +1186,7 @@
                     <p>Set up your WiFi credentials and start using your new smart assistant.</p>
                     <div class="code-block">
                         <span style="color: var(--text-muted);">// wifi.h</span><br>
-                        const char* ssid = "YOUR_SSID";
+                        const char* ssid = "YOUR_SSID";<br>
                         const char* password = "YOUR_PASSWORD";
                     </div>
                 </div>
