--- a/public/index.html
+++ b/public/index.html
@@ -1059,8 +1059,8 @@
                 <div class="device-glow"></div>
                 <div class="device-mockup">
                     <div class="device-screen">
-                        <div class="terminal-line"><span class="terminal-prompt">$</span> arc init hub1</div>
-                        <div class="terminal-line"><span class="terminal-output">Initializing Arc hub1...</span></div>
+                        <div class="terminal-line"><span class="terminal-prompt">$</span> git clone github.com/arc-assistant/hub1</div>
+                        <div class="terminal-line"><span class="terminal-output">Cloning hub1 from GitHub</span></div>
                         <div class="terminal-line"><span class="terminal-output">Connecting to WiFi...</span></div>
                         <div class="terminal-line"><span class="terminal-output">✓ Connected: 192.168.1.42</span></div>
                         <div class="terminal-line"><span class="terminal-prompt">$</span> Ready for commands_</div>
